# jinfanQuant-k2.5

./: .env.example  .gitignore  CLAUDE.md  SKILLS.md  docker-compose.dev.yml  docker-compose.yml  email_config.txt  review_content.txt  review_content_utf8.txt  review_part1_content.txt
backend/: .dockerignore  .env.example  Dockerfile  _code_review.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 112a883b8ecc_add_nav_status_to_funds.py  5e5a3ebfd16e_add_benchmark_id_to_products.py  61b5a34e0aa5_add_strategy_categories_table.py  6d49d6b0fb67_expand_products_table_phase4.py  a1b2c3d4e5f6_p0_share_class_auth_indexes.py  b2c3d4e5f6g7_p0_review_fixes.py  b30a683e30bb_initial_schema.py  c3d4e5f6g7h8_p1_risk_alerts.py  (+7 more)
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  (+1 more)
backend/scripts/: .survey_result.json  check_data_quality.py  crawl_concurrent.py  crawl_loop.sh  daily_crawl.py  daily_update.py  expand_fund_pool.py  fill_calendar.py  fix_missing_jinfan_funds.py  import_all_indices.py  import_indices.py  import_jinfan_funds.py  import_missing_indices.py  import_valuation_portfolio.py  ingest_funds.py  ingest_nav_robust.py  scheduler.py  test_fof99_integration.py  test_fof99_login.py  verify_nav_data.py
backend/tests/: cross_validate.py  cross_validate_real.py  smoke_test.py  smoke_test_phase4.py  test_attribution.py  test_backtest_accuracy.py  test_chart_pdf.py  test_fund_api.py  test_metrics_edge.py  test_nav_merged_sources.py  test_nav_series_logic.py  test_product_api.py  test_report_api.py  test_security.py
(+108 files in other folders)
